--- a/css/style.css
+++ b/css/style.css
@@ -286,6 +286,10 @@ body {
   display: none;
 }
 
+.nav-background {
+  display: none;
+}
+
 /*////////////////
   front end mentors styles
 ////////////////*/
@@ -589,5 +593,29 @@ body {
     font-size: 2rem;
     /* padding: 0.8rem; */
     white-space: nowrap;
+  }
+
+  .nav-background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    display: block;
+    height: 100vh;
+    width: 0%;
+    z-index: 100;
+    transition: all 500ms;
+
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+  }
+
+  .nav-open .nav-background {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    display: block;
+    width: 100%;
   }
 }
