testing navigation animation on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ SPACING SYSTEM (px)
 html {
   /* 10 / 16 = 0.625 */
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
@@ -276,6 +277,7 @@ body {
 /* /////////////////////////////////////// */
 
 .btn-mobile-nav {
+  display: none;
   border: none;
   background: none;
   cursor: pointer;
@@ -547,6 +549,10 @@ body {
     padding: 1.6rem 2rem;
   }
 
+  .btn-mobile-nav {
+    display: block;
+  }
+
   /* NESTED LINKS */
 
   .nav-list-nested {
@@ -604,11 +610,12 @@ body {
     height: 100vh;
     width: 0%;
     z-index: 100;
-    transition: all 500ms;
 
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+
+    /* transition: all 600ms; */
   }
 
   .nav-open .nav-background {
@@ -617,5 +624,6 @@ body {
     pointer-events: auto;
     display: block;
     width: 100%;
+    transition: all 675ms;
   }
 }
